--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule 'irc']
-  path=irc
-  url=git://github.com/JakobOvrum/LuaIRC.git
-  
+[submodule "LuaIRC"]
+	path = LuaIRC
+	url = git://github.com/JakobOvrum/LuaIRC.git
